Step3 add others apis (#3)
